--- a/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
@@ -493,6 +493,7 @@
                                 <state key="normal" title="Confirm Bet"/>
                                 <connections>
                                     <action selector="confirmBet:" destination="c9o-jy-IhL" eventType="touchUpInside" id="QCw-yU-gLf"/>
+                                    <segue destination="SO7-ZD-Qbi" kind="unwind" unwindAction="unwindToHome:" id="chT-AI-Qm6"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Yes" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="YmZ-je-Jpd">
@@ -520,6 +521,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UAv-LD-5l7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="SO7-ZD-Qbi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="4394.3999999999996" y="-70.197044334975374"/>
         </scene>
