--- a/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
@@ -345,6 +345,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fQu-gp-n4b">
+                                <rect key="frame" x="322" y="88" width="53" height="60"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="adminGoToNext:" destination="Hi9-OD-mkS" eventType="touchUpInside" id="uoW-TR-bnz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="gnF-Ws-udg"/>
@@ -396,6 +403,14 @@
                                 <state key="normal" title="Continue to Final Step"/>
                                 <connections>
                                     <action selector="continueToFinalStep:" destination="XZo-TD-Tgb" eventType="touchUpInside" id="fXL-6f-5MW"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fSK-7T-lmO">
+                                <rect key="frame" x="313" y="88" width="62" height="61"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="adminContinue:" destination="XZo-TD-Tgb" eventType="touchUpInside" id="6KN-cO-6ov"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -504,6 +519,13 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hyJ-on-vod">
+                                <rect key="frame" x="139" y="659" width="97" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ZZ4-Om-hmX"/>
@@ -518,6 +540,7 @@
                         <outlet property="secondBetButton" destination="ONN-sY-p0g" id="f3V-Hp-ybs"/>
                         <outlet property="secondBetText" destination="DA0-tg-ffg" id="Ji2-mn-GOG"/>
                         <outlet property="subTitle" destination="4ak-m9-Qha" id="21e-xL-5AB"/>
+                        <outlet property="subTitleTextBox" destination="hyJ-on-vod" id="Hc1-YV-Kfl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UAv-LD-5l7" userLabel="First Responder" sceneMemberID="firstResponder"/>
