filtering search, adding the bet choice to the profile, and filtering create a bet by username

--- a/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
+++ b/Rainmaker/Rainmaker/Storyboards/HomeScreen.storyboard
@@ -293,10 +293,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iC1-XF-f9w">
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Type username here" translatesAutoresizingMaskIntoConstraints="NO" id="iC1-XF-f9w">
                                 <rect key="frame" x="0.0" y="148" width="375" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
+                                <scopeButtonTitles>
+                                    <string>Title</string>
+                                    <string>Title</string>
+                                </scopeButtonTitles>
                             </searchBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Who are you making the bet with?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7J4-HW-Zhf">
                                 <rect key="frame" x="0.0" y="105" width="375" height="28"/>
